--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
+  "type": "module",
   "name": "backend-basic",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
+    "dev": "node --watch --no-warnings src/index.js",
     "start": "node src/index.js"
   },
   "author": "",
